fixed rest of lightmask

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,3 +34,9 @@
   width: calc(var(--squareSize) / 2);
   height: calc(var(--squareSize) / 2);
 }
+
+.outerMask {
+  position: fixed;
+  background: black;
+  z-index: 2;
+}
